# llamatrade

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  Procfile.dev  README.md  docker-compose.test.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
libs/alpaca/: README.md  pyproject.toml
libs/alpaca/llamatrade_alpaca/: __init__.py  client_base.py  config.py  errors.py  metrics.py  resilience.py
libs/alpaca/tests/: __init__.py  conftest.py  test_client_base.py  test_config.py  test_errors.py  test_market_data_client.py  test_metrics.py  test_models.py  test_resilience.py  test_singletons.py  test_streaming.py  test_trading_client.py  test_trading_models.py
libs/common/: README.md  pyproject.toml
libs/common/llamatrade_common/: __init__.py  auth.py  connect.py  errors.py  eventbus.py  events.py  health.py  logging.py  metrics.py  middleware.py  models.py  observability.py  utils.py
libs/common/tests/: test_auth.py  test_connect.py  test_errors.py  test_eventbus.py  test_events.py  test_health.py  test_logging.py  test_metrics.py  test_middleware.py  test_observability.py  test_utils.py
libs/compiler/: README.md  pyproject.toml
libs/compiler/llamatrade_compiler/: __init__.py  compiled.py  evaluator.py  extractor.py  pipeline.py  rebalance.py  session.py  sizing.py  state.py  types.py  vectorized.py  vectorized_compiler.py
libs/compiler/tests/: __init__.py  conftest.py  test_compiled.py  test_dsl_strategies.py  test_eval_perf.py  test_evaluator.py  test_extractor.py  test_history_window.py  test_indicators_golden.py  test_pipeline.py  test_rebalance.py  test_session.py  test_sizing.py  test_state.py  test_types.py  test_vectorized.py  test_vectorized_compiler.py  test_weight_methods.py
libs/db/: Dockerfile  pyproject.toml
libs/db/llamatrade_db/: __init__.py  base.py  rls.py  session.py
libs/db/tests/: __init__.py  conftest.py  test_base.py  test_models_audit.py  test_models_auth.py  test_models_backtest.py  test_models_billing.py  test_models_ledger.py  test_models_market_data.py  test_models_notification.py  test_models_portfolio.py  test_models_strategy.py  test_models_trading.py  test_rls.py  test_session.py
libs/dsl/: README.md  pyproject.toml
libs/dsl/llamatrade_dsl/: __init__.py  ast.py  indicators.py  parser.py  serializer.py  to_json.py  validator.py
libs/dsl/tests/: __init__.py  test_indicators.py  test_json.py  test_parser.py  test_serializer.py  test_validator.py
libs/events/: README.md  pyproject.toml
libs/events/llamatrade_events/: __init__.py  bus.py  channels.py  codec.py  consumer.py  fanout.py  idempotency.py  observability.py
libs/events/tests/: conftest.py  test_bus.py  test_catalog.py  test_channels.py  test_codec.py  test_consumer.py  test_fanout.py  test_idempotency.py  test_integration_redis.py  test_redis_streams.py  test_transport.py
libs/grpc/: README.md  pyproject.toml
libs/grpc/connectrpc/: __init__.py  code.py  errors.py
libs/grpc/llamatrade/: __init__.py
libs/grpc/llamatrade_grpc/: __init__.py
libs/proto/: Makefile  README.md  buf.gen.core.yaml  buf.gen.python.yaml  buf.gen.web.yaml  buf.gen.yaml  buf.yaml  pyproject.toml
libs/proto/llamatrade_proto/: __init__.py
libs/proto/tests/: __init__.py  conftest.py  test_clients_auth.py  test_clients_backtest.py  test_clients_base.py  test_clients_ledger.py  test_clients_market_data.py  test_clients_trading.py  test_interceptors_auth.py  test_interceptors_logging.py  test_interceptors_telemetry.py  test_server_base.py  test_server_connect.py
libs/telemetry/: README.md  pyproject.toml
libs/telemetry/llamatrade_telemetry/: __init__.py  config.py  conventions.py  domain.py  logging.py  registry.py  runtime.py  setup.py  tracing.py
libs/telemetry/tests/: conftest.py  test_conventions.py  test_domain.py  test_hardening.py  test_instrumentation.py  test_logging.py  test_middleware.py  test_registry.py  test_setup.py  test_tracing.py
services/auth/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
services/auth/src/: __init__.py  main.py  models.py
services/auth/tests/: __init__.py  test_api_key_service.py  test_api_keys.py  test_auth.py  test_auth_unit.py  test_grpc_auth.py  test_tenant_service.py  test_tenants.py  test_user_service.py  test_users.py
services/backtest/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
services/backtest/src/: __init__.py  celery_app.py  convert.py  main.py  models.py  progress.py
services/backtest/tests/: __init__.py  conftest.py  test_backtest_service.py  test_backtest_service_extended.py  test_backtester.py  test_backtests_router.py  test_benchmarks.py  test_celery_tasks.py  test_convert.py  test_e2e_lifecycle.py  test_grpc_servicer.py  test_grpc_streaming.py  test_health.py  test_indicator_cache.py  test_indicators.py  test_market_data.py  test_metrics.py  test_models.py  test_progress.py  test_progress_extended.py  test_reaper.py  test_servicer_auth.py  test_strategy_adapter.py  test_strategy_compiler.py  test_validation.py  test_vectorized_engine.py  test_websocket_router.py
services/billing/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
services/billing/src/: __init__.py  main.py  models.py
services/billing/tests/: conftest.py  test_billing_service_extended.py  test_grpc_billing.py  test_grpc_servicer_extended.py  test_payment_method_extended.py  test_payment_methods.py  test_services.py  test_stripe_client.py  test_subscriptions.py  test_usage.py  test_webhook_handlers.py  test_webhooks.py
services/gateway/: Dockerfile  kong.local.yaml  kong.yaml  pyproject.toml
services/gateway/tests/: test_kong_config.py
services/market-data/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
services/market-data/src/: __init__.py  (+7 more)
services/notification/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
services/portfolio/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
services/strategy/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
services/trading/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
(+1081 files in other folders)
