[project]
name = "llamatrade"
version = "0.1.0"
description = "LlamaTrade - Algorithmic Trading Platform"
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Generated protobuf files use uppercase method names (HasField, ClearField, etc.)
"libs/grpc/llamatrade_grpc/generated/**" = ["N802", "N803", "UP036"]
"libs/grpc/llamatrade/**" = ["N802", "N803", "UP036", "E501"]
# gRPC servicers follow protocol naming (PascalCase methods)
"services/*/src/grpc/servicer.py" = ["N802", "N803", "F821", "F841"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_generics = false  # Allow Any from third-party libs like pydantic
disallow_untyped_decorators = false  # Allow FastAPI decorators
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["tests", "venv", ".venv", "libs/grpc/llamatrade", "services/*/src/grpc"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services/*/tests", "tests/integration"]
addopts = "--cov --cov-report=term-missing"
markers = [
    "integration: requires real database (deselect with '-m not integration')",
    "slow: takes >10 seconds (deselect with '-m not slow')",
    "security: tenant isolation tests",
    "workflow: multi-service tests",
    "gateway: Kong gateway configuration tests",
    "billing: billing and subscription tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*:",
]

[tool.coverage.run]
source = ["services/*/src", "libs/*/src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@abstractmethod",
]
# Libraries enforce 80% coverage in their own pyproject.toml
# Services will enforce 80% once they have real implementations
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.uv.workspace]
members = [
    "libs/common",
    "libs/compiler",
    "libs/db",
    "libs/dsl",
    "libs/grpc",
    "services/auth",
    "services/strategy",
    "services/backtest",
    "services/market-data",
    "services/trading",
    "services/portfolio",
    "services/notification",
    "services/billing",
]
