[project]
name = "llamatrade-alpaca"
version = "0.1.0"
description = "Shared Alpaca API client library for LlamaTrade services"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
prometheus = [
    "prometheus_client>=0.17.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
    "prometheus_client>=0.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llamatrade_alpaca"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=llamatrade_alpaca --cov-report=term-missing"

[tool.coverage.run]
source = ["llamatrade_alpaca"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.14"
