[project]
name = "llamatrade-compiler"
version = "0.1.0"
description = "LlamaTrade Strategy Compiler"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "llamatrade-dsl",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
# Reference oracle for the indicator golden tests (tests/test_indicators_golden.py).
# Kept out of `dev` because the `ta-lib` wheel needs the native TA-Lib C library,
# which CI runners lack. The tests `importorskip` it (skipped where absent);
# `uv sync --all-extras` installs it for local runs.
golden = [
    "ta-lib>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llamatrade_compiler"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["llamatrade_compiler"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.14"
