[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llamatrade-db"
version = "0.1.0"
description = "Shared database models and migrations for LlamaTrade"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["llamatrade_db"]
