[project]
name = "llamatrade-dsl"
version = "0.1.0"
description = "S-expression DSL parser and compiler for LlamaTrade strategies"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llamatrade_dsl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=llamatrade_dsl --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["llamatrade_dsl"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "UP036", "UP046", "UP007"]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.14"
