[project]
name = "llamatrade-events"
version = "0.1.0"
description = "The unified event library for LlamaTrade: proto envelope, pluggable transport, catalog, consumer runtime, and fan-out"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "redis>=5.0.0",
    "protobuf>=4.25.0",
    "llamatrade-proto",
    "llamatrade-telemetry",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
integration = [
    "testcontainers[redis]>=4.0.0",
    "pytest-timeout>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llamatrade_events"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=llamatrade_events --cov-report=term-missing --cov-fail-under=80"
markers = [
    "integration: requires a real Redis via Docker (deselect with -m 'not integration')",
]

[tool.coverage.run]
source = ["llamatrade_events"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.14"
