[project]
name = "llamatrade-grpc"
version = "0.1.0"
description = "gRPC client library for LlamaTrade inter-service communication"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "connectrpc>=0.1.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "grpcio-testing>=1.60.0",
    "mypy-protobuf>=3.5.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llamatrade_grpc", "llamatrade"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
