[project]
name = "llamatrade-proto"
version = "0.1.0"
description = "Protocol Buffers definitions and generated code for LlamaTrade"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "connect-python>=0.8.1",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "grpcio-testing>=1.60.0",
    "mypy-protobuf>=3.5.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llamatrade_proto"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.14"

[tool.coverage.run]
omit = ["llamatrade_proto/generated/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
