[project]
name = "llamatrade-telemetry"
version = "0.1.0"
description = "Unified OpenTelemetry + Prometheus telemetry for LlamaTrade services"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-prometheus>=0.61b0",
    "opentelemetry-exporter-otlp-proto-http>=1.40.0",
    "prometheus-client>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "starlette>=0.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "fastapi>=0.109.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llamatrade_telemetry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=llamatrade_telemetry --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["llamatrade_telemetry"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.14"
