[project]
name = "llamatrade-backtest"
version = "0.1.0"
description = "LlamaTrade Backtest Service"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "numpy>=1.26.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "grpcio>=1.60.0",
    "llamatrade-common",
    "llamatrade-db",
    "llamatrade-dsl",
    "llamatrade-proto",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "celery-types>=0.22.0",  # Type stubs for Celery
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "src/celery_app.py",
    "src/workers/celery_tasks.py",
    "src/workers/tasks.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.14"
exclude = ["tests/**", "**/__pycache__"]
