[project]
name = "llamatrade-billing"
version = "0.1.0"
description = "LlamaTrade Billing Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "stripe>=7.0.0",
    "llamatrade-common",
    "llamatrade-db",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
