[project]
name = "llamatrade-billing"
version = "0.1.0"
description = "LlamaTrade Billing Service"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "stripe>=7.0.0",
    "llamatrade-common",
    "llamatrade-db",
    "llamatrade-proto",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "pyjwt>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
extend = "../../pyproject.toml"
line-length = 100
target-version = "py314"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.14"
