[project]
name = "llamatrade-portfolio"
version = "0.1.0"
description = "LlamaTrade Portfolio Service"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "llamatrade-common",
    "llamatrade-db",
    "llamatrade-proto",
    "llamatrade-alpaca",
    "numpy>=1.26.0",
    "httpx>=0.26.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]
integration = [
    "testcontainers[postgres]>=4.0.0",
    "asyncpg>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires Docker (real Postgres via testcontainers)",
]

# Coverage is NOT in addopts on purpose: the IO shells (gRPC servicers, writer,
# fill ingestion, repositories) are covered by the Docker-backed integration
# suite, so a unit-only run sits below the gate. CI enforces the 80% threshold by
# running the FULL suite with coverage:
#   uv run --extra integration pytest tests --cov=src
[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "src/main.py",  # FastAPI lifespan/bootstrap — exercised via the running app
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py314"
extend = "../../pyproject.toml"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.14"
