[project]
name = "llamatrade-trading"
version = "0.1.0"
description = "LlamaTrade Trading Service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "websockets>=12.0",
    "grpcio>=1.60.0",
    "exchange-calendars>=4.2.0",
    "redis>=5.0.0",
    "tenacity>=8.2.0",
    "llamatrade-common",
    "llamatrade-compiler",
    "llamatrade-db",
    "llamatrade-dsl",
    "llamatrade-alpaca",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.14"
